2005-11-04	Benedikt Meurer <benny@xfce.org>

	* exo/Makefile.am, exo/exo.h, exo/exo.symbols, exo/exo-wrap-table.{c,h}:
	  Add new class ExoWrapTable, which provides a container widget with
	  automatic child layouting according to the width allocated to the
	  container.
	* docs/reference/exo-docs.sgml, docs/reference/exo-sections.txt,
	  docs/reference/exo.types, docs/reference/tmpl/exo-wrap-table.sgml:
	  Add API documentation for ExoWrapTable.
	* tests/test-exo-wrap-table.c, tests/Makefile.am: Add a simple test
	  case for ExoWrapTable.
	* po/*.po: Merge new strings.

2005-10-29	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_set_cursor): Use g_list_nth_data()
	  instead of g_list_nth()->data.
	* exo/exo-icon-view.c(exo_icon_view_layout_single_row): Drop unused
	  variable spacing.
	* exo/exo-icon-view.c(exo_icon_view_drag_motion): Drop unused variable
	  model.
	* exo/exo-icon-view.c(exo_icon_view_item_accessible_action_do_action):
	  Drop unused variable icon_view.
	* exo/exo-icon-view.c(exo_icon_view_create_drag_icon): Verify that
	  the icon view is realized.

2005-10-27	Benedikt Meurer <benny@xfce.org>

	* exo/abicheck.sh, exo/exo-utils.{c,h}, exo/exo.symbols: Include
	  implementations for the exo_atomic_* functions and add them to the
	  exported interface of the library.
	* configure.in.in: Don't use -fvisibility=hidden, as it causes trouble
	  with the extern inline functions.
	* exo/exo-private.h, exo/exo-toolbars-private.h, python/exo.override,
	  python/exomodule.c: Mark internal symbols with G_GNUC_INTERNAL.
	* docs/reference/exo-docs.sgml, docs/reference/exo-sections.txt,
	  docs/reference/tmpl/exo-utils.sgml: Add the exo-utils to the reference
	  documentation.
	* docs/reference/tmpl/exo-config.sgml: Mark the config interface as
	  Stable.
	* exo/exo-config.{c,h.in}, exo/exo.symbols,
	  docs/reference/exo-sections.txt: Add exo_check_version() to support
	  runtime version checks.